# funzy

./: funzy.cabal  stack.yaml
app/: Main.hs
src/Text/: Funzy.hs
test/: Spec.hs
